--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -45,7 +45,7 @@
   /* Colors */
   --text-color: black;
   --header-color: black;
-  --background-color: #9efcff;
+  --background-color: #B7E892;
   --link-color: black;
   --text-bold-color: black;
   --code-highlight-color: rgba(255,255,0,0.5);
@@ -56,7 +56,7 @@
   --title-slide-background-color: black;
   --title-slide-text-color: #000000;
   --header-background-color: black;
-  --header-background-text-color: #9efcff;
+  --header-background-text-color: #B7E892;
   --base: black;
   --white: #FFFFFF;
   --black: #000000;
